# scout

./: .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  migrate_fts5.py  pyproject.toml  runtests.py  runtests.sh  scout.py  scout_client.py  setup.py  test_fts4.cfg  test_fts4_c.cfg  test_fts4_no_c.cfg  test_fts5.cfg  tests.py
.github/workflows/: build_latest_container.yml  build_release_container.yml  tests.yaml  wheels.yaml
docker/: Dockerfile
docker/server/: server.py
docs/: Makefile  client.rst  conf.py  deployment.rst  example.rst  hacks.rst  index.rst  installation.rst  requirements.txt  search-queries.rst  server.rst
scout/: __main__.py  client.py  constants.py  exceptions.py  gevent_server.py  models.py  search.py  serializers.py  server.py  tests.py  validator.py  views.py
scripts/: migrate_020.py
